[package]
name = "df-sol"
version = "0.1.3"
edition = "2021"
authors = ["quanghuynguyen1902"]
description = "create template repo for anchor framework"
license = "MIT"
repository = "https://github.com/quanghuynguyen1902/df-sol"

[dependencies]
anyhow = "1.0.32"
base64 = "0.22.1"
bincode = "1.3.3"
cargo_toml = "0.20.2"
chrono = "0.4.19"
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.19"
heck = "0.5.0"
pathdiff = "0.2.0"
portpicker = "0.1.1"
regex = "1.8.3"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
solana-sdk = "1.18.16"
solang-parser = "=0.3.3"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
tar = "0.4.35"
toml = "0.8.14"
walkdir = "2.3.2"